--- a/action.yml
+++ b/action.yml
@@ -39,6 +39,9 @@ inputs:
   build-artifacts:
     description: 'Path to build artifacts file'
     required: false
+  cache-artifacts:
+    description: 'Cache artifacts output'
+    required: false
   collect-metrics:
     description: 'Enable/disable metrics collection'
     required: false
@@ -71,15 +74,15 @@ runs:
         CMD="skaffold ${{ inputs.command }}"
         
         if [ ! -z "${{ inputs.filename }}" ]; then
-          CMD="$CMD -f ${{ inputs.filename }}"
+          CMD="$CMD --filename ${{ inputs.filename }}"
         fi
         
         if [ ! -z "${{ inputs.profile }}" ]; then
-          CMD="$CMD -p ${{ inputs.profile }}"
+          CMD="$CMD --profile ${{ inputs.profile }}"
         fi
         
         if [ ! -z "${{ inputs.namespace }}" ]; then
-          CMD="$CMD -n ${{ inputs.namespace }}"
+          CMD="$CMD --namespace ${{ inputs.namespace }}"
         fi
         
         if [ ! -z "${{ inputs.tag }}" ]; then
@@ -97,6 +100,10 @@ runs:
         
         if [ ! -z "${{ inputs.build-artifacts }}" ]; then
           CMD="$CMD --build-artifacts ${{ inputs.build-artifacts }}"
+        fi
+        
+        if [ ! -z "${{ inputs.cache-artifacts }}" ]; then
+          CMD="$CMD --cache-artifacts ${{ inputs.cache-artifacts }}"
         fi
         
         if [ ! -z "${{ inputs.output }}" ]; then
